@@ -1,3 +1,8 @@
+2020-06-08         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test, strfieldnum.
+	* strfieldnum.awk, strfieldnum.in, strfieldnum.ok: New files.
+
 2020-05-06         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New test, lintplus.
