@@ -1,3 +1,8 @@
+2020-06-08         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y: Fix `print $"2"' case. Thanks to Ed Morton
+	Morton <mortoneccc@comcast.net> for the report.
+
 2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y: Allow @/foo/ as return expression in a function.
